# bifrost-gate

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  bifrost-gate.service  bifrost-gate.spec  bifrost-logs.sh  bifrost.service  build_packages.sh  build_rpm.sh  cliff.toml  config.toml.example  create_packages.sh  generate_changelog.sh  increment_version.sh  main_prometheus_example.rs  setup_logging.sh
.github/workflows/: rust.yml
auto_instrument/: Cargo.toml
auto_instrument/src/: lib.rs
debian/: logrotate  postinst  tmpfiles.d
postman/: Bifrost-Gate-VPN-HowTo.postman_collection.json  Bifrost-Gate-VPN-HowTo.postman_environment.json  Bifrost-Gate.postman_collection.json
src/: config.rs  db.rs  engine.rs  exec.rs  i18n.rs  logger.rs  main.rs  metrics.rs  middleware.rs  models.rs  worker.rs
src/api/: docs.rs  mod.rs  types.rs
src/api/controller/: certificates.rs  connections.rs  mod.rs  peers.rs  response_codes.rs  secrets.rs  strongswan.rs  topology.rs
src/api/router/: certificates.rs  connections.rs  mod.rs  peers.rs  response_codes.rs  secrets.rs  strongswan.rs  topology.rs
src/api/service/: certificates.rs  connections.rs  peers.rs  response_codes.rs  secrets.rs  strongswan.rs  topology.rs
src/public/: howto.html
