[package]
name = "bifrost-gate"
version = "0.1.0-12"
edition = "2021"
description = "Bifröst-Gate: Agente de monitoreo para StrongSwan"
authors = ["Estuardo Dardón"]
license = "AGPL-3.0-or-later"

[dependencies]
config = "0.14"
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
# IMPORTANTE: Activamos "util" para tener service_fn
tower = { version = "0.4", features = ["util"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
# openswagger = { version = "0.1", features = ["redoc"] }
openapi = "0.1"
actix-web = "4.0"
paperclip = { version = "0.6", features = ["regex"] }
prometheus = "0.13"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
systemd-journal-logger = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.21"
auto_instrument = { path = "auto_instrument" }

[target.'cfg(target_os = "linux")'.dependencies]
rsvici = "0.1"
rtnetlink = "0.14"

[package.metadata.deb]
maintainer = "Estuardo Dardón <tu-email@ejemplo.com>"
copyright = "2026, Estuardo Dardón"
license-file = ["LICENSE", "0"]
depends = "$auto, sqlite3, strongswan, strongswan-pki, strongswan-swanctl, libcharon-extra-plugins"
section = "utils"
priority = "optional"
maintainer-scripts = "debian/"
assets = [
    ["target/release/bifrost-gate", "/usr/bin/bifrost-gate", "755"],
    ["config.toml", "/etc/bifrost/config.toml", "644"],
    ["certs/cert.pem", "/etc/bifrost/certs/cert.pem", "644"],
    ["certs/key.pem", "/etc/bifrost/certs/key.pem", "600"],
    ["bifrost.service", "/lib/systemd/system/bifrost.service", "644"],
]

[package.metadata.rpm]
package = "bifrost-gate"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[[package.metadata.rpm.files]]
source = "target/release/bifrost-gate"
dest = "/usr/bin/bifrost-gate"
mode = "0755"

[[package.metadata.rpm.files]]
source = "config.toml"
dest = "/etc/bifrost/config.toml"
mode = "0644"

[[package.metadata.rpm.files]]
source = "bifrost.service"
dest = "/lib/systemd/system/bifrost.service"
mode = "0644"